New features: - Spring Boot version upgrade to 3.5.3 - Hibernate Envers removal - Unit and integration test fixes - Removal of deprecated Spring Security content - README.md update