@@ -1,17 +1,19 @@
 package com.moraes.authenticator.api.controller;
 
+import java.net.URI;
+
+import org.springframework.data.domain.Page;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
 import com.moraes.authenticator.api.controller.interfaces.IController;
 import com.moraes.authenticator.api.model.dto.real_state.proposal.ProposalDTO;
 import com.moraes.authenticator.api.model.dto.real_state.proposal.ProposalFilterDTO;
 import com.moraes.authenticator.api.model.dto.real_state.proposal.ProposalListDTO;
 import com.moraes.authenticator.api.service.interfaces.real_state.IProposalService;
+
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-
-import java.net.URI;
 
 @RestController
 @RequestMapping("/api/v1/proposal")
@@ -23,7 +25,7 @@ public class ProposalController implements IController<ProposalDTO, Long> {
 	@PostMapping
 	public ResponseEntity<Long> insert(@RequestBody @Valid ProposalDTO object) {
 		final Long id = service.insert(object);
-		return ResponseEntity.created(URI.create(String.format("/api/v1/proposal/%s", id))).body(id);
+		return ResponseEntity.created(URI.create("/api/v1/proposal/%s".formatted(id))).body(id);
 	}
 
 	// TODO lacks integration tests
